--- a/index.html
+++ b/index.html
@@ -8,5 +8,257 @@
     <title>Jesús Chacón</title>
 </head>
 <body>
+    <header class="header" id="header">
+        <div class="margin--outside">
+            <div class="header--container">
+                <div class="menu--title">
+                    <h1 class="title">Jesús Chacón</h1>
+                    <ul class="menu">
+                        <li class="menu--items"><a href="#" class="menu--item">inicio</a></li>
+                        <li class="menu--items"><a href="#" class="menu--item">sobre mi</a></li>
+                        <li class="menu--items"><a href="#" class="menu--item">sevicios</a></li>
+                        <li class="menu--items"><a href="#" class="menu--item">portafolio</a></li>
+                        <li class="menu--items"><a href="#" class="menu--item">contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header--container">
+                <div class="menu--social">
+                    <ul class="menu">
+                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-github-square"></i></a></li>
+                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-twitter-square"></i></a></li>
+                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-facebook-square"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="section" id="about">
+        <div class="section--container"></div>
+        <div class="section--container">
+            <h2 class="about--title">sobre <span>mi</span></h2>
+            <article class="about">
+                <h3>Lorem, ipsum dolor.</h3>
+                <img src="img/undraw_designer_kcp7.svg" alt="user" class="about--image" />
+                <p class="about--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum minus esse earum sapiente adipisci quos, repellat beatae reprehenderit. Dolorem autem aliquam libero enim laboriosam, praesentium vero dolor velit, repellendus accusantium corporis facilis recusandae nesciunt, necessitatibus quos rem provident! Possimus asperiores rem iure repellat alias ab exercitationem ipsam voluptates neque. Aliquam odio neque maxime fuga ea quo culpa provident sequi deleniti ipsam quidem unde labore nesciunt, autem aliquid sed ipsum omnis suscipit! Dolorem mollitia animi accusamus deleniti dignissimos similique quas perferendis aliquid facilis quaerat? Aut nulla perferendis minus at ex dolore reprehenderit quisquam a vitae sit cumque doloribus maxime, ea officiis!</p>
+                <div style="clear: both; display: block; height: 0; padding: 0;"></div>
+            </article>
+            <article class="about">
+                <h3>Mis Habilidades</h3>
+                <div class="about--skills">
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Html5</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Css</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Javascript</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Reactjs</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Boostrap</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>  
+                    <div class="about--skill">
+                        <div class="skill--bar">
+                            <div class="skill--details">Webpack</div>
+                            <div class="skill--details">70%</div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="about">
+                <h3>Mi Educación</h3>
+            </article>
+        </div>
+    </section>
+    <section class="services" id="services">
+        <div class="margin--outside">
+            <h2 class="services--title">mis <span>servicios</span></h2>
+            <div class="services--container">
+                <article class="service">
+                    <figure class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </figure>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus expedita minima dignissimos voluptatem voluptatibus eius.</p>
+                    </div>
+                </article>
+                <article class="service">
+                    <div class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae officiis laborum non voluptate quasi fugit!</p>
+                    </div>
+                </article>
+                <article class="service">
+                    <div class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae officiis laborum non voluptate quasi fugit!</p>
+                    </div>
+                </article>
+                <article class="service">
+                    <div class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae officiis laborum non voluptate quasi fugit!</p>
+                    </div>
+                </article>
+                <article class="service">
+                    <div class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae officiis laborum non voluptate quasi fugit!</p>
+                    </div>
+                </article>
+                <article class="service">
+                    <div class="service--container">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="service--details">
+                        <h3 class="service--title">Lorem, ipsum dolor.</h3>
+                        <p class="service--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae officiis laborum non voluptate quasi fugit!</p>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="portfolios" id="portfolios">
+        <div class="margin--outside">
+            <h2 class="portfolios--title">mi <span>portafolio</span></h2>
+            <div class="portfolios--container">
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+                <article class="portfolio">
+                    <figure class="portfolio--container">
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                    </figure>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="contacts" id="contacts">
+        <div class="margin--outside">
+            <h2 class="contacts--title">Estar en <span>contacto</span></h2>
+            <div class="contacts--container">
+                <article class="contact">
+                    <div class="contact--details">
+                        <div class="contact--container">
+                            <i class="fas fa-envelope-square"></i>
+                        </div>
+                        <div class="contact--description">
+                            <h3 class="contact--title">Correo</h3>
+                            <p class="contact--text">chjesuscode@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contact--details">
+                        <div class="contact--container">
+                            <i class="fas fa-phone-square"></i>
+                        </div>
+                        <div class="contact--description">
+                            <h3 class="contact--title">Télefono</h3>
+                            <p class="contact--text">(+58) 424 7258343</p>
+                        </div>
+                    </div>
+                    <div class="contact--details">
+                        <div class="contact--container">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </div>
+                        <div class="contact--description">
+                            <h3 class="contact--title">Dirección</h3>
+                            <p class="contact--text">San Cristóbal - Edo Táchira</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="contact">
+                    <form action="" class="form--container">
+                        <div class="input--container col">
+                            <input type="text" placeholder="Nombre">
+                        </div>
+                        <div class="input--container col">
+                            <input type="text" placeholder="Télefono">
+                        </div>
+                        <div class="input--container">
+                            <input type="text" placeholder="Correo">
+                        </div>
+                        <div class="input--container">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                        </div>
+                        <div class="input--container">
+                            <input type="submit" value="Enviar" class="submit">
+                        </div>
+                    </form>
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
