--- a/index.html
+++ b/index.html
@@ -260,5 +260,6 @@
             </div>
         </div>
     </section>
+    <div class="menu--bar"><i class="fas fa-bars"></i></div>
 </body>
 </html>
