eventos de ico--bar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header--container">
                 <div class="menu--title">
                     <h1 class="title">Jesús Chacón</h1>
-                    <ul class="menu">
+                    <ul class="menu" id="menu-desktop">
                         <li class="menu--items"><a href="#" class="menu--item">inicio</a></li>
                         <li class="menu--items"><a href="#" class="menu--item">sobre mi</a></li>
                         <li class="menu--items"><a href="#" class="menu--item">sevicios</a></li>
@@ -265,14 +265,17 @@
         </div>
     </section>
     <div class="menu--mobile">
-        <ul class="menu">
-            <li class="menu--items"><a href="#" class="menu--item">inicio</a></li>
-            <li class="menu--items"><a href="#" class="menu--item">sobre mi</a></li>
-            <li class="menu--items"><a href="#" class="menu--item">sevicios</a></li>
-            <li class="menu--items"><a href="#" class="menu--item">portafolio</a></li>
-            <li class="menu--items"><a href="#" class="menu--item">contacto</a></li>
-        </ul>
+        <nav class="menu">
+            <ul id="menu-mobile" style="text-align: center; list-style: none;">
+                <li class="menu--items"><a href="#" class="menu--item">inicio</a></li>
+                <li class="menu--items"><a href="#" class="menu--item">sobre mi</a></li>
+                <li class="menu--items"><a href="#" class="menu--item">sevicios</a></li>
+                <li class="menu--items"><a href="#" class="menu--item">portafolio</a></li>
+                <li class="menu--items"><a href="#" class="menu--item">contacto</a></li>
+            </ul>
+        </nav>
     </div>
     <div class="menu--bar"><i class="fas fa-bars"></i></div>
+    <script src="js/main.js"></script>
 </body>
 </html>
