--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="header--container">
                 <div class="menu--social">
                     <ul class="menu">
-                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-github-square"></i></a></li>
-                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-twitter-square"></i></a></li>
-                        <li class="social--items"><a href="#" class="social--item"><i class="fab fa-facebook-square"></i></a></li>
+                        <li class="social--items"><a href="https://github.com/chjesus" target="-blank" class="social--item"><i class="fab fa-github-square" aria-label="GitHub"></i></a></li>
+                        <li class="social--items"><a href="https://twitter.com/ch__jesus" target="-blank" class="social--item"><i class="fab fa-twitter-square" aria-label="Twitter"></i></a></li>
+                        <li class="social--items"><a href="https://www.facebook.com/jesus.chacon.1420" target="-blank" class="social--item"><i class="fab fa-facebook-square" aria-label="Facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
