--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Author: Jesús Chacón, Developer: Front-end, Category: Javascript">
+    <meta name="theme-color" content="#db5945"/>
     <link rel="icon" type="image/png" href="img/Recurso.png" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>Jesús Chacón</title>
@@ -30,9 +29,9 @@
             <div class="header--container">
                 <div class="menu--social">
                     <ul class="menu">
-                        <li class="social--items"><a href="https://github.com/chjesus" target="-blank" class="social--item"><i class="fab fa-github-square" aria-label="GitHub"></i></a></li>
-                        <li class="social--items"><a href="https://twitter.com/ch__jesus" target="-blank" class="social--item"><i class="fab fa-twitter-square" aria-label="Twitter"></i></a></li>
-                        <li class="social--items"><a href="https://www.facebook.com/jesus.chacon.1420" target="-blank" class="social--item"><i class="fab fa-facebook-square" aria-label="Facebook"></i></a></li>
+                        <li class="social--items"><a href="https://github.com/chjesus" target="-blank" class="social--item"><i class="icon-github-square" aria-label="GitHub"></i></a></li>
+                        <li class="social--items"><a href="https://twitter.com/ch__jesus" target="-blank" class="social--item"><i class="icon-twitter-square" aria-label="Twitter"></i></a></li>
+                        <li class="social--items"><a href="https://www.facebook.com/jesus.chacon.1420" target="-blank" class="social--item"><i class="icon-facebook-square" aria-label="Facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -100,7 +99,7 @@
             <div class="services--container">
                 <article class="service">
                     <figure class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </figure>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -109,7 +108,7 @@
                 </article>
                 <article class="service">
                     <div class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </div>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -118,7 +117,7 @@
                 </article>
                 <article class="service">
                     <div class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </div>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -127,7 +126,7 @@
                 </article>
                 <article class="service">
                     <div class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </div>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -136,7 +135,7 @@
                 </article>
                 <article class="service">
                     <div class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </div>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -145,7 +144,7 @@
                 </article>
                 <article class="service">
                     <div class="service--container">
-                        <i class="fas fa-cog"></i>
+                        <i class="icon-cog"></i>
                     </div>
                     <div class="service--details">
                         <h3 class="service--title">Lorem, ipsum dolor.</h3>
@@ -161,51 +160,51 @@
             <div class="portfolios--container">
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
                 <article class="portfolio">
                     <figure class="portfolio--container">
-                        <a href="https://platzi.com/clases/html5-css3/" target="_blank"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
+                        <a href="https://platzi.com/clases/html5-css3/" target="_blank" rel="noopener"><img src="img/diploma-html5-css3-1.jpg" alt="" class="portfolio--image"></a>
                     </figure>
-                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" >Ir al sitio</a></h3>
+                    <h3 class="portfolio--title"><a href="https://platzi.com/@chjesus/curso/1350-html5-css3/diploma/detalle/" target="_blank" rel="noopener">Ir al sitio</a></h3>
                 </article>
             </div>
         </div>
@@ -276,7 +275,7 @@
             </ul>
         </nav>
     </div>
-    <div class="menu--bar"><i class="fas fa-bars"></i></div>
+    <div class="menu--bar"><i class="icon-menu"></i></div>
     <script src="js/main.js"></script>
 </body>
 </html>
